# NeXus

./: .gitignore  CLAUDE.md  README.md  nexus_project.template.json
.agents/rules/: access-state-policy.md  citation-integrity.md  engineering-baseline.md  evidence-discipline.md  model-routing.md  repo-conventions.md  verification-policy.md
.agents/skills/citation-verifier/: SKILL.md
.agents/skills/claim-extractor/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/deep-dive/: SKILL.md
.agents/skills/evidence-auditor/: SKILL.md
.agents/workflows/: bugfix-safe.md  full-research-pipeline.md  hack.md  implement-feature.md  orchestrate-task.md  quick-survey.md  review-changes.md  revise-paper.md  verify-result.md
assets/: animated_logo.py  generate_animated_header.py  generate_animated_logo.py
mcp-servers/paper-service/: pyproject.toml  server.py  shared.py  test_debug_citations_fetch.py  test_smoke.py
mcp-servers/paper-service/sources/: __init__.py  arxiv_source.py  core_api.py  crossref.py  datacite.py  europe_pmc.py  openalex.py  semantic_scholar.py  shadow_library.py  unpaywall.py
mcp-servers/paper-service/tools/: __init__.py  download_pdf.py  fetch_paper.py  get_citations.py  search_papers.py  verify_citation.py
mcp-servers/pipeline-orchestrator/: compliance_checker.py  domain_taste_engine.py  experiment_auditor.py  pyproject.toml  quality_engine.py  schemas.py  sdp_handoff_generator.py  server.py  stages.py  test_orchestrator.py  validators.py  venue_tier_registry.py
mcp-servers/pipeline-orchestrator/venue_playbooks/: playbooks.json
(+33 files in other folders)
